<resources>
    <string name="app_name">Dyve</string>

    <string-array name="emgr_Msg">
        <item>Sorry, I\'m busy. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.</item>
        <item>Sorry, I\'m in a meeting. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.</item>
        <item>Sorry, I\'m studying. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.</item>
        <item>I\'m at a party! If you need me, respond with the Dyve number.</item>
        <item>Hi! I silenced my phone to avoid distractions, but If you need me just respond with the Dyve number!</item>
    </string-array>

    <string name="buttonCustom">Customize</string>
    <string name="emgrCustomTxtLabel"><b>Emergency Contact Msg:</b></string>
    <string name="nonEmgrCustomTxtLabel"><b>Non Emergency Contact Msg:</b></string>

    <string name="emgrCustomTxt">Sorry, I\'m busy. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.  </string>
    <string name="emgrCustomTxt2">Sorry, I\'m studying. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.  </string>
    <string name="emgrCustomTxt3">Sorry, I\'m in the movies. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.  </string>
    <string name="emgrCustomTxt4">Sorry, I\'m driving. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.  </string>
    <string name="emgrCustomTxt5">Sorry, I\'m in the gym. If it\'s an emergency, please respond with the Dyve number and I will get back to you as soon as possible.  </string>

    <string name="nonEmgrCustomTxt">Sorry, I\'m busy. I will get back to you as soon as I can. </string>
    <string name="nonEmgrCustomTxt2">Sorry, I\'m studying. I will get back to you as soon as I can. </string>
    <string name="nonEmgrCustomTxt3">Sorry, I\'m in the movies. I will get back to you as soon as I can. </string>
    <string name="nonEmgrCustomTxt4">Sorry, I\'m driving. I will get back to you as soon as I can. </string>
    <string name="nonEmgrCustomTxt5">Sorry, I\'m in the gym. I will get back to you as soon as I can. </string>

    <string name="postScript">(Download the Dyve app today from Google Play!)  </string>
    <string name="customSaveTxt">Save</string>
    <string name="copyMsgButton">Copy From Above</string>
    <string name="DefaultMsgButton">Default</string>
    <string name="About">About Dyve:
        Dyve was designed to easily filter out all unwanted mobile interaction when
users are busy while also providing an intelligent means to be
contacted in an emergency.\n\nTake back your experiences. Own your devices. Master control over your digital world.

        Our mission is to enrich and protect your relationship with mobile devices.
        \n\nSimply add emergency contacts and Dyve! Your audible alerts will be turned off. When you receive a call from an emergency contact your phone will respond via text message with the customizable emergency message and a Dyve number so that your emergency contact has the option to alert you. Your non emergency contacts will receive your standard customizable Dyve message!
        \n\n
    </string>
    <string name="legal">Legal: By downloading any application from Dyve, LLC or Google™ (here after referred to as “The Company”), installing or using this application or any portion thereof (“Application”), you agree to the following terms and conditions (the “Terms and Conditions”).
\n
        \n
1. USE OF APPLICATION
a. The Company grants you the non-exclusive, non-transferable, limited right and license to install and use this Application solely and exclusively for your personal use.
b. You may not use the Application in any manner that could damage, disable, overburden, or impair the Application (or servers or networks connected to the Application), nor may you use the Application in any manner that could interfere with any other party’s use and enjoyment of the Application (or servers or networks connected to the Application).
c. You agree that you are solely responsible for (and that The Company has no responsibility to you or to any third party for) your use of the Application, any breach of your obligations under the Terms and Conditions, and for the consequences (including any loss or damage which The Company may suffer) of any such breach.
\n
        \n
2. PROPRIETARY RIGHTS
You acknowledge that (a) the Application contains proprietary and confidential information that is protected by applicable intellectual property and other laws, and (b) The Company and/or third parties own all right, title and interest in and to the Application and content, excluding content provided by you, that may be presented or accessed through the Application, including without limitation all Intellectual Property Rights therein and thereto. “Intellectual Property Rights” means any and all rights existing from time to time under patent law, copyright law, trade secret law, trademark law, unfair competition law, and any and all other proprietary rights, and any and all applications, renewals, extensions and restorations thereof, now or hereafter in force and effect worldwide. You agree that you will not, and will not allow any third party to, (i) copy, sell, license, distribute, transfer, modify, adapt, translate, prepare derivative works from, decompile, reverse engineer, disassemble or otherwise attempt to derive source code from the Application or content that may be presented or accessed through the Application for any purpose, unless otherwise permitted, (ii) take any action to circumvent or defeat the security or content usage rules provided, deployed or enforced by any functionality (including without limitation digital rights management functionality) contained in the Application, (iii) use the Application to access, copy, transfer, transcode or retransmit content in violation of any law or third party rights, or (iv) remove, obscure, or alter The Company’s or any third partyâ€™s copyright notices, trademarks, or other proprietary rights notices affixed to or contained within or accessed in conjunction with or through the Application.
\n
        \n
3. THE COMPANY TERMS OF SERVICE AND PRIVACY POLICY
a. The Company’s Privacy Policy (located at http://www.DyveApp.com/privacypolicy) explains how The Company treats your information and protects your privacy when you use the Application. You agree to the use of your data in accordance with The Company’s privacy policies.
\n
        \n
4. U.S. GOVERNMENT RESTRICTED RIGHTS
This Application, related materials and documentation have been developed entirely with private funds. If the user of the Application is an agency, department, employee, or other entity of the United States Government, the use, duplication, reproduction, release, modification, disclosure, or transfer of the Application, including technical data or manuals, is restricted by the terms, conditions and covenants contained in these Terms and Conditions. In accordance with Federal Acquisition Regulation 12.212 for civilian agencies and Defense Federal Acquisition Regulation Supplement 227.7202 for military agencies, use of the Application is further restricted by these Terms and Conditions.
\n
        \n
5. EXPORT RESTRICTIONS
The Application may be subject to export controls or restrictions by the United States or other countries or territories. You agree to comply with all applicable U.S. and international export laws and regulations. These laws include restrictions on destinations, end users, and end use.
\n
        \n
6. TERMINATION
These Terms and Conditions will continue to apply until terminated by either you or The Company as set forth below. You may terminate these Terms and Conditions at any time by permanently deleting the Application from your mobile device in its entirety. Your rights automatically and immediately terminate without notice from The Company or any Third Party if you fail to comply with any provision of these Terms and Conditions. In such event, you must immediately delete the Application.
\n
        \n
7. INDEMNITY
To the maximum extent permitted by law, you agree to defend, indemnify and hold harmless The Company, its affiliates and their respective directors, officers, employees and agents from and against any and all claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable attorneys fees) arising out of or accruing from your use of the Application, including your downloading, installation, or use of the Application, or your violation of these Terms and Conditions.
\n
        \n
8. DISCLAIMER OF WARRANTIES
a. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF THE APPLICATION IS AT YOUR SOLE DISCRETION AND RISK AND THAT THE APPLICATION IS PROVIDED AS IS AND AS AVAILABLE WITHOUT WARRANTY OF ANY KIND.
b. YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR MOBILE DEVICE, OR OTHER DEVICE, OR LOSS OF DATA THAT RESULTS FROM SUCH USE.
c. THE COMPANY FURTHER EXPRESSLY DISCLAIMS ALL WARRANTIES AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE APPLICATION.
d. THE APPLICATION IS NOT INTENDED FOR USE IN THE OPERATION OF NUCLEAR FACILITIES, LIFE SUPPORT SYSTEMS, EMERGENCY COMMUNICATIONS, AIRCRAFT NAVIGATION OR COMMUNICATION SYSTEMS, AIR TRAFFIC CONTROL SYSTEMS, OR ANY OTHER ACTIVITIES IN WHICH THE FAILURE OF THE APPLICATION COULD LEAD TO DEATH, PERSONAL INJURY, OR SEVERE PHYSICAL OR ENVIRONMENTAL DAMAGE.
\n
        \n
9. LIMITATION OF LIABILITY
YOU EXPRESSLY UNDERSTAND AND AGREE THAT THE COMPANY, ITS SUBSIDIARIES AND AFFILIATES, AND ITS LICENSORS ARE NOT LIABLE TO YOU UNDER ANY THEORY OF LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL CONSEQUENTIAL OR EXEMPLARY DAMAGES THAT MAY BE INCURRED BY YOU THROUGH YOUR USE OF THE APPLICATION, INCLUDING ANY LOSS OF DATA OR DAMAGE TO YOUR MOBILE DEVICE, WHETHER OR NOT THE COMPANY OR ITS REPRESENTATIVES HAVE BEEN ADVISED OF OR SHOULD HAVE BEEN AWARE OF THE POSSIBILITY OF ANY SUCH LOSSES ARISING.
\n
        \n
10. MISCELLANEOUS
a. These Terms and Conditions constitute the entire Agreement between you and The Company relating to the Application and govern your use of the Application, and completely replace any prior or contemporaneous agreements between you and The Company regarding the Application.
b. The failure of The Company to exercise or enforce any right or provision of these Terms and Conditions does not constitute a waiver of such right or provision, which will still be available to The Company.
c. If any court of law, having the jurisdiction to decide on this matter, rules that any provision of these Terms and Conditions is invalid, then that provision will be removed from the Terms and Conditions without affecting the rest of the Terms and Conditions. The remaining provisions of these Terms and Conditions will continue to be valid and enforceable.
d. The rights granted in these Terms and Conditions may not be assigned or transferred by either you or The Company without the prior written approval of the other party. Neither you nor The Company are permitted to delegate their responsibilities or obligations under these Terms and Conditions without the prior written approval of the other party.
\n
    </string>
</resources>
